# welding-design-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
specs/: spec-extract_path_info_from_robx.txt
test/: test_batch_add_solder_joints.py  test_extract_path_info_from_robx.py  test_welding_scenario.py  test_welding_sequence_navigator.py
test/error/: error_message.py
welding_app/: chat_loop.py  test_final_validation.py
welding_app/agents/: main_agent.py  main_agent_tools.py  runtime_config.py  scenario_operations.py  types.py  welding_task.py
welding_app/algorithm/sort_algo/: caculate_fitness.py  solder_joint_sort.py  solder_joint_sort_with_2opt.py  welding_seam_sort.py
welding_app/databases/: readme.md  welding_plan.db  welding_scenario.db  welding_scenarios.db
welding_app/databases/rag_data/: welding_data.txt
welding_app/error/: error_message.py
welding_app/prompts/to_main_agent/: __init__.py  summarization.md  task.md
welding_app/prompts/to_welding_plan_agent/: __init__.py  system_prompt.md
welding_app/prompts/to_welding_scenario_parsing_agent/: __init__.py  system_prompt.md
welding_app/prompts/to_welding_scenario_parsing_checker/: __init__.py  system_prompt.md
welding_app/server_types/: file_transfer_types.py  main_agent_responce.py
welding_app/servers/: file_transfer.py  main_agent.py  mcp_server.py
welding_app/welding_scenario/: materials.py  process_parameters.py  solder_joint.py  types.py  weld_seam.py  weld_sequence_plan.py  welding_plan.py  welding_scenario.py
(+20 files in other folders)
