[project]
name = "welding-design-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.12",
    "duckduckgo-search>=8.1.1",
    "fastmcp>=3.1.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langgraph>=1.1.3",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.11.0",
]
