[project]
name = "welding-design-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma-hnswlib>=0.7.6",
    "deepagents>=0.4.12",
    "duckduckgo-search>=8.1.1",
    "fastmcp>=3.1.1",
    "hnswlib>=0.8.0",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.3",
    "mlflow>=3.10.1",
    "opentelemetry-exporter-otlp>=1.40.0",
    "pip>=26.0.1",
    "pypdf>=6.9.2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
]
